Replaced OpenRouter API with the Gemini API and fixed bugs in Chatbot Feature